# electoral-polygons

./: .gitignore  pyproject.toml
src/data/raw/: RSV-17.11.2025-----Extras-partiale-.xlsx
src/electoral_polygons/: match_addresses.py  rules_parser.py
src/scripts/: build_bucharest_assets.py  dev_fetch_buildings.py  dev_make_sv1_polygon.py  dev_make_sv1_polygon_from_points.py  dev_match_sv1.py  dev_parse_sv1.py
